fix widget size on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -69,13 +69,14 @@ h1 {
   margin-bottom: 20px;
 }
 
-.facebook {
+.twitter-timeline {
   margin-left: auto;
   margin-right: auto;
-  display: block;
-  color: #000042;
+  display: flex;
 }
-
+.txt_wrap {
+  text-align:center;
+}
 .selection {
   font-size: 2em;
   margin-top: -20px;
@@ -144,7 +145,7 @@ footer {
   background-color: #CFD5D3;
   font-size: 150%;
   width: 100%;
-  min-height: 9em;
+  height: 8em;
   position: absolute;
   margin-top: 20px;
   text-align: center;
@@ -160,13 +161,6 @@ a:hover {
   color: white;
 }
 
-<<<<<<< HEAD
-p {
-  /*text-align: center;*/
-}
-
-=======
->>>>>>> 20a801706e155b251554747f1f440b279ac6c946
 h2 {
   text-align: center;
 }
@@ -317,9 +311,10 @@ h2 {
     display: block;
   }
   .short {
-    width: 90%;
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
+    /*margin:auto;*/
   }
   .myslides {
     width: 95%;
@@ -333,14 +328,19 @@ h2 {
   .gallery {
     width: 40%;
   }
-
-  
-/*p {*/
-/*  margin:auto;*/
-/*}*/
-
-
-
+  .widget-container {
+    width:80%;
+  }
+  footer {
+  background-color: #CFD5D3;
+  font-size: 150%;
+  width: 100%;
+  min-height: 9em;
+  position: absolute;
+  margin-top: 20px;
+  text-align: center;
+  color: #000042;
+}
 }
 .fillout select {
   padding: 9px 8px;
